# senmu

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  vcpkg.json
include/ines/: iNes.hpp
include/nes_core/: Nes.hpp
src/: CMakeLists.txt  main.cpp  nesSFML.cpp
src/core/: CMakeLists.txt
src/ines/: CMakeLists.txt  iNes.cpp
src/nes_core/: CMakeLists.txt  Nes.cpp  Nes.hpp
src/nes_core/cartridge/: GamePak.cpp  GamePak.hpp
src/nes_core/cartridge/mapper/: Mapper.hpp  Mapper_000.hpp
src/nes_core/comm/: Bus.cpp  Bus.hpp
src/nes_core/common/: Image.hpp
src/nes_core/cpu/: AddressingModes.cpp  Instructions.cpp  Mos6502.cpp  Mos6502.hpp
src/nes_core/input/: NesController.hpp
src/nes_core/memory/: PaletteRam.hpp  Ram.cpp  Ram.hpp  VRam.hpp
src/nes_core/ppu/: Ntsc2C02.cpp  Ntsc2C02.hpp
tests/: CMakeLists.txt
tests/cpu/my_cpu_tests/: MyCpuTests.cpp
tests/cpu/nestest/: NesTest.cpp
